django-sitecats changelog
=========================


v0.6.3
------
* Django 1.11 compatibility improvements.


v0.6.2
------
* Package distribution fix.
* Django 1.9 deprecation warning silenced.


v0.6.1
------
* Django 1.9 compatibility improvements.


v0.6.0
----------
+ Added TieBase.get_linked_objects().
* IMPORTANT: Added migrations. Use `migrate sitecats --fake` to make DB up-to-date.


v0.5.0
------
+ Added Spanish loco.
* Improved Django 1.8 compatibility.


v0.4.0
------
+ Implemented categories cloud rendering JS.
+ Implemented editor enhancements JS.


v0.3.1
------
* Fixed TypeError exception when get_category_lists() is used.


v0.3.0
------
+ Implemented `toolbox.get_category_lists()`.
* DB hits number decreased.
* Fixed number of ties calculation for items.
* Slight API changes.


v0.2.0
------
+ Implemented `category_separator` param support for category editor.
+ Implemented locked category restrictions for Django Admin.
+ Implemented category choices for editors.
+ Implemented `sitecats_url` template tag.
+ get_category_aliases_under() added into toolbox.
+ CategoryRequestHandler error messages now can be customized.
* Fixed category ordering.
* Fixed rendering category with no subcategories in editor.
* Fixed Cache._get_cache_entry() fail to get categories from root.


v0.1.0
------
+ Basic functionality.