@@ -4,7 +4,6 @@ python:
   - 3.6
   - 3.5
   - 3.4
-  - 3.3
   - 2.7
 
 env:
@@ -13,9 +12,7 @@ env:
   - DJANGO="Django>=1.9,<1.10"
   - DJANGO="Django>=1.8,<1.9"
   - DJANGO="Django>=1.7,<1.8"
-  - DJANGO="Django>=1.6,<1.7"
-  - DJANGO="Django>=1.5,<1.6"
-  
+
 install:
   - pip install -U coverage coveralls django-etc $DJANGO
 
@@ -26,24 +23,9 @@ matrix:
   exclude:
    - python: 3.6
      env: DJANGO="Django>=1.7,<1.8"
-   - python: 3.6
-     env: DJANGO="Django>=1.6,<1.7"
-   - python: 3.6
-     env: DJANGO="Django>=1.5,<1.6"
 
    - python: 3.5
      env: DJANGO="Django>=1.7,<1.8"
-   - python: 3.5
-     env: DJANGO="Django>=1.6,<1.7"
-   - python: 3.5
-     env: DJANGO="Django>=1.5,<1.6"
-
-   - python: 3.3
-     env: DJANGO="Django>=1.11,<1.12"
-   - python: 3.3
-     env: DJANGO="Django>=1.10,<1.11"
-   - python: 3.3
-     env: DJANGO="Django>=1.9,<1.10"
 
 after_success:
   coveralls
