@@ -34,11 +34,8 @@ def main():
 
         settings.configure(**configure_kwargs)
 
-    try:  # Django 1.7 +
-        from django import setup
-        setup()
-    except ImportError:
-        pass
+    from django import setup
+    setup()
 
     from django.test.utils import get_runner
     runner = get_runner(settings)()
