@@ -1,5 +1,5 @@
 [tox]
-envlist = py{27,33,34}-django{15,16,17,18,19,110,111}
+envlist = py{27,34}-django{17,18,19,110,111}
           py{35,36}-django{18,19,110,111}
 
 install_command = pip install {opts} {packages}
@@ -8,8 +8,6 @@ skip_missing_interpreters = True
 [testenv]
 commands = python sitecats/runtests.py
 deps =
-    django15: Django>=1.5,<1.6
-    django16: Django>=1.6,<1.7
     django17: Django>=1.7,<1.8
     django18: Django>=1.8,<1.9
     django19: Django>=1.9,<1.10
